--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 						<p class="new">Nouveau</p>
 						<img src="images/palettedugout.jpg" alt="photo d'un plat">
 						<h3>La palette du goût</h3>
-						<p class="site">Ménilmontant</p>
-						<i class="far fa-heart"></i>
+						<p class="site">Ménilmontant</p>	
 					</a>
+					<div class="heart">
+						<i class="far fa-heart"></i>
+					</div>
 				</article>
 
 				<article class="card_choice">
@@ -92,18 +94,22 @@
 							<p class="new">Nouveau</p>
 							<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 							<h3>La note enchantée</h3>
-							<p class="site">Charonne</p>
-							<i class="far fa-heart"></i>
+							<p class="site">Charonne</p>	
 						</a>
+						<div class="heart">
+							<i class="far fa-heart"></i>
+						</div>
 					</article>
 
 					<article class="card_choice">
 						<a href="index_menu3.html">
 							<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 							<h3>A la française</h3>
-							<p class="site">Cité Rouge</p>
-							<i class="far fa-heart"></i>
+							<p class="site">Cité Rouge</p>	
 						</a>
+						<div class="heart">
+							<i class="far fa-heart"></i>
+						</div>
 					</article>
 
 					<article class="card_choice">
@@ -111,8 +117,10 @@
 							<img src="images/delicedessens.jpg" alt="photo d'un plat">
 							<h3>Le délice des sens</h3>
 							<p class="site">Folie-Méricourt</p>
-							<i class="far fa-heart"></i>
 						</a>
+						<div class="heart">
+							<i class="far fa-heart"></i>
+						</div>
 					</article>
 			</div>
 </section>
